Fix club page alignment issues
Updated the alignment of the card components in clubs page.

--- a/client/src/components/clubs/clubCard.css
+++ b/client/src/components/clubs/clubCard.css
@@ -1,7 +1,4 @@
 .clubcard {
-
-    width: 22rem;
-    height: 25rem;
     float:left;
     margin: 3rem;
     padding: 2rem;
